cleaned up value providers, fixed multi-column bug